[gd_scene load_steps=3 format=3 uid="uid://b0k2g3y57yr65"]

[ext_resource type="Script" uid="uid://dyygdjk1g2wis" path="res://Scenes/camera/sceneCamera.gd" id="1_8xmom"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_26ytk"]
size = Vector2(20.194, 20)

[node name="Camera Module" type="Camera2D"]
scale = Vector2(0.987675, 1.01943)
enabled = false
script = ExtResource("1_8xmom")

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(57.6583, 32.4859)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.0175605, 0)
shape = SubResource("RectangleShape2D_26ytk")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
